feat: add create, update and delete product by id functionality
